[gd_scene load_steps=5 format=3 uid="uid://mainscene_uuid_001"]

[ext_resource type="Script" path="res://core/Main.gd" id="1_main"]
[ext_resource type="Script" path="res://core/CameraFollow.gd" id="2_camera"]
[ext_resource type="Script" path="res://core/PauseMenu.gd" id="3_pause"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_top_color = Color(0.385, 0.454, 0.55, 1)
sky_horizon_color = Color(0.646, 0.656, 0.67, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
background_mode = 2
sky = SubResource("Sky_1")
tonemap_mode = 2
glow_enabled = true

[node name="Main" type="Node3D"]
script = ExtResource("1_main")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://objects/Player.tscn", "res://objects/Ball.tscn", "res://objects/Goal.tscn")
spawn_path = NodePath("..")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707106, 0.707106, 0, -0.707106, 0.707106, 0, 10, 10)
script = ExtResource("2_camera")
current = true

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 20.0
offset_right = 50.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
text = "0 - 0"
horizontal_alignment = 1

[node name="PauseMenu" type="Control" parent="HUD"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_pause")

[node name="ColorRect" type="ColorRect" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="CenterContainer" type="CenterContainer" parent="HUD/PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/PauseMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="HUD/PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "PAUSED"
horizontal_alignment = 1

[node name="BtnResume" type="Button" parent="HUD/PauseMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Resume"

[node name="BtnRestart" type="Button" parent="HUD/PauseMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Restart Match"

[node name="BtnMenu" type="Button" parent="HUD/PauseMenu/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Return to Menu"

[connection signal="pressed" from="HUD/PauseMenu/CenterContainer/VBoxContainer/BtnResume" to="HUD/PauseMenu" method="_on_btn_resume_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/CenterContainer/VBoxContainer/BtnRestart" to="HUD/PauseMenu" method="_on_btn_restart_pressed"]
[connection signal="pressed" from="HUD/PauseMenu/CenterContainer/VBoxContainer/BtnMenu" to="HUD/PauseMenu" method="_on_btn_menu_pressed"]
